Wed Feb 14 14:54:40 2001 Christophe Iasci <chrisiasci@aol.com>

	* dlfcn.cc (dlopen): Do not call LoadLibrary with a NULL pointer, when
	the library is not found

2001-02-14  Egor Duda  <deo@logos-m.ru>
  
	* fhandler_console.cc (fhandler_console::char_command): Ignore unknown
	rendition codes in \033[xx;yym control sequences

Fri Feb  9 23:19:01 2001  Christopher Faylor <cgf@cygnus.com>

	* fork.cc (fork_parent): Return EAGAIN when can't record pid.
	* pinfo.h (pinfo::remember): Return value of call to proc_subproc.
	* sigproc.cc (proc_subproc): Return error if can't record pid.

Fri Feb  9 12:17:27 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (mknod): Add valid parameters.

Thu Feb  8 22:09:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Check for reusing a mapping only on MAP_SHARED
	and on MAP_PRIVATE|MAP_ANON in the special case of offset 0.

Thu Feb  8 21:57:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (class list): Add member `hash'.
	(list::list): Initialize `hash'.
	(list::get_list_by_fd): Use filepath hash value to get the correct
	mapping list if it's not an anonymous mapping.
	(map::add_list): Initialize `hash' with filepath hash value.
	(mmap): Check for reusing a mapping only on MAP_SHARED.

Wed Feb  7 18:47:36 2001  Christopher Faylor <cgf@cygnus.com>

	* signal.cc (killpg): Correct first argument.

Wed Feb  7 22:22:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Add LoadDLLinitfunc for iphlpapi.dll.
	Add LoadDLLfuncEx statements for GetIfTable@12 and GetIpAddrTable@12.
	* fhandler_socket.cc (fhandler_socket::ioctl): Move variable
	definitions to the beginning of the function to allow better debugging.
	Add handling for SIOCGIFHWADDR, SIOCGIFMETRIC and SIOCGIFMTU.
	* net.cc: Include iphlpapi.h.
	(get_2k_ifconf): Rewritten. Uses IP Helper API now.
	(get_nt_ifconf): Add handling for SIOCGIFHWADDR, SIOCGIFMETRIC
	and SIOCGIFMTU.
	(get_95_ifconf): Ditto. Renamed from `get_9x_ifconf'.